--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,12 +9,12 @@
     <ImageButton
         android:id="@+id/fragment_home_settings_imageButton"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginStart="307dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_baseline_settings_24"
+        android:src="@drawable/ic_baseline_menu_24"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,16 +25,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="100dp"
 
-        android:layout_marginEnd="33dp"
-        android:layout_marginBottom="10dp"
-        android:text="Latest Recommendations"
+        android:layout_marginTop="130dp"
+        android:text="Latest"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_home_recyclerView"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,8 +39,9 @@
         android:id="@+id/fragment_home_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+
+        android:layout_marginTop="15dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -54,15 +52,11 @@
         android:id="@+id/fragment_home_greeting_message"
         android:layout_width="249dp"
         android:layout_height="36dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="45dp"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_home_settings_imageButton"
         app:layout_constraintEnd_toStartOf="@+id/fragment_home_settings_imageButton"
-        app:layout_constraintHorizontal_bias="0.568"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/fragment_home_settings_imageButton" />
 
     <TextView
         android:id="@+id/fragment_home_no_data_msg_textView"
