--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,14 +26,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="130dp"
+
         android:text="Latest"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_home_greeting_message"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="130dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_home_recyclerView"
@@ -52,11 +53,11 @@
         android:id="@+id/fragment_home_greeting_message"
         android:layout_width="249dp"
         android:layout_height="36dp"
+        android:layout_marginStart="20dp"
+        android:text="Welcome Back, user"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/fragment_home_settings_imageButton"
-        app:layout_constraintEnd_toStartOf="@+id/fragment_home_settings_imageButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fragment_home_settings_imageButton" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_home_settings_imageButton" />
 
     <TextView
         android:id="@+id/fragment_home_no_data_msg_textView"
