--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,7 +11,7 @@
         android:id="@+id/fragment_search_search_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
         android:text="@string/fragment_search_title_search"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,8 +26,7 @@
         android:id="@+id/fragment_search_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,10 +34,11 @@
 
     <SearchView
         android:id="@+id/fragment_search_searchView"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:queryBackground="@android:color/transparent"
+        android:layout_marginHorizontal="15dp"
         android:iconifiedByDefault="false"
         app:layout_constraintBottom_toTopOf="@+id/fragment_search_recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
