--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,13 +27,13 @@
         android:layout_height="wrap_content"
 
 
+        android:layout_marginTop="20dp"
         android:text="Latest"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_home_greeting_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_home_greeting_message"
         tools:layout_editor_absoluteY="130dp" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -63,13 +63,12 @@
         android:id="@+id/fragment_home_no_data_msg_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
         android:text="No recommendations available."
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/fragment_home_recyclerView"
-        app:layout_constraintEnd_toEndOf="@+id/fragment_home_recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/fragment_home_recyclerView"
-        app:layout_constraintTop_toTopOf="@+id/fragment_home_recyclerView"
-        app:layout_constraintVertical_bias="0.33" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fragment_home_recyclerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
