--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="15dp"
 
         android:text="My Library"
         android:textSize="30sp"
@@ -22,33 +22,26 @@
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/fragment_myLibrary_recyclerview"
-        android:layout_width="322dp"
-
-        android:layout_height="425dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.093">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/library_fragment_no_data_msg_textView"
         android:layout_width="260dp"
         android:layout_height="30dp"
+        android:layout_marginTop="200dp"
         android:text="Looks like your library is empty!"
         android:textSize="18sp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/fragment_myLibrary_recyclerview"
-        app:layout_constraintEnd_toEndOf="@+id/fragment_myLibrary_recyclerview"
-        app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="@+id/fragment_myLibrary_recyclerview"
-        app:layout_constraintTop_toTopOf="@+id/fragment_myLibrary_recyclerview"
-        app:layout_constraintVertical_bias="0.602" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fragment_myLibrary_recyclerview" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
