--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -30,7 +30,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_search_searchView" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_search_searchView"/>
+
+
+
+    <TextView
+        android:id="@+id/fragment_search_no_data_msg_textView"
+        android:layout_width="260dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="200dp"
+        android:text="No search results!"
+        android:textSize="18sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fragment_search_recyclerView" />
 
     <SearchView
         android:id="@+id/fragment_search_searchView"
