--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -7,37 +7,47 @@
 
     <TextView
         android:id="@+id/track_item_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
-        android:text="Arctic Monkeys"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="15dp"
+        android:drawableLeft="@drawable/ic_baseline_audiotrack_24"
+        android:ellipsize="end"
+        android:singleLine="true"
+
+        android:text="Track tittle"
         android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/track_item_add_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/track_item_artist"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="15dp"
-        android:text="Engine failure"
-        android:textSize="25sp"
+        android:singleLine="true"
+        android:text="Artist"
+        android:ellipsize="end"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/track_item_add_button"
         app:layout_constraintStart_toStartOf="@+id/track_item_title"
         app:layout_constraintTop_toBottomOf="@+id/track_item_title" />
 
     <ImageButton
         android:id="@+id/track_item_add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="36dp"
         android:background="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/track_item_artist"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.509"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:layout_constraintTop_toTopOf="@+id/track_item_title"
+        app:layout_constraintVertical_bias="0.466"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
