--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,11 +51,14 @@
 
     <TextView
         android:id="@+id/fragment_home_greeting_message"
-        android:layout_width="249dp"
+        android:layout_width="0dp"
         android:layout_height="36dp"
         android:layout_marginStart="20dp"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="Welcome Back, user"
         android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_home_settings_imageButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_home_settings_imageButton" />
 
