--- a/app/src/main/res/layout/fragment_setings.xml
+++ b/app/src/main/res/layout/fragment_setings.xml
@@ -32,7 +32,7 @@
             android:layout_height="90dp"
 
             android:layout_marginTop="28dp"
-            android:src="@android:mipmap/sym_def_app_icon"
+            android:src="@drawable/ic_baseline_perm_identity_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
