--- a/app/src/main/res/layout/fragment_update_profile.xml
+++ b/app/src/main/res/layout/fragment_update_profile.xml
@@ -56,7 +56,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginTop="56dp"
-            android:src="@drawable/download"
+            android:src="@drawable/ic_baseline_perm_identity_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
