--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -2,68 +2,63 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recommendation_item_layout"
     android:layout_width="match_parent"
-    android:paddingVertical="4dp"
-    android:paddingHorizontal="10dp"
     android:layout_height="wrap_content"
-    android:id="@+id/recommendation_item_layout">
+    android:paddingHorizontal="10dp"
+    android:paddingVertical="4dp">
 
     <ImageView
         android:id="@+id/user_item_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_baseline_perm_identity_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars"
+        app:layout_constraintTop_toTopOf="@+id/user_item_name"
         />
 
     <TextView
         android:id="@+id/user_item_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:text="John Doe"
-        android:textSize="20sp"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/user_item_send_message_button"
         app:layout_constraintStart_toEndOf="@+id/user_item_image"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/user_item_textview1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Recommended:"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/user_item_name"
-        app:layout_constraintTop_toBottomOf="@+id/user_item_name" />
 
     <TextView
         android:id="@+id/user_item_similarity"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="8dp"
-        android:text="100%"
+        android:layout_marginBottom="10dp"
+        android:text="@string/similarity_placeholder"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/user_item_textview1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/user_item_send_message_button"
+        app:layout_constraintStart_toStartOf="@+id/user_item_name"
         app:layout_constraintTop_toBottomOf="@+id/user_item_name" />
-
 
     <ImageButton
         android:id="@+id/user_item_send_message_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginEnd="24dp"
         android:background="@null"
-        android:layout_marginEnd="5dp"
         android:src="@android:drawable/ic_menu_send"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/user_item_similarity"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/user_item_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
