--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,19 +3,19 @@
 
     <item android:id="@+id/navbar_home"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home"/>
+        android:title="@string/nav_menu_home_item_title"/>
 
     <item android:id="@+id/navbar_search"
         android:icon="@drawable/ic_baseline_search_24"
-        android:title="Search"/>
+        android:title="@string/nav_menu_search_item_title"/>
 
     <item android:id="@+id/navbar_library"
     android:icon="@drawable/ic_baseline_library_music_24"
-    android:title="Library"/>
+    android:title="@string/nav_menu_library_item_title"/>
 
     <item android:id="@+id/navbar_recommendations"
         android:icon="@drawable/ic_baseline_supervised_user_circle_24"
-        android:title="Recomendations"/>
+        android:title="@string/nav_menu_recommendations_item_title"/>
 
 
 
